c2dascript-transpile/tests/snapshots/snapshots__transpile@frame_address.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/frame_address.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(43) }, [], false, false, true); declaration=direct_frame; cause=unsupported builtin __builtin_frame_address
--> ./tests/snapshots/frame_address.c:2:12

--> ./tests/snapshots/frame_address.c:1:1
